--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9326,6 +9326,9 @@ section.home-footer .row > div {
       width: 100%; } }
   .salon#content .sidebar .calendar {
     margin-bottom: 10px; }
+    @media screen and (max-width: 991px) {
+      .salon#content .sidebar .calendar {
+        display: none; } }
   .salon#content .sidebar .phone .btn-red {
     position: relative;
     display: block;
