CSS Similar Business OK

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9437,6 +9437,9 @@ section.home-footer .row > div {
       .salon#content .sidebar .related-content .rival:last-child {
         border: none; }
       .salon#content .sidebar .related-content .rival a:first-child {
+        padding-right: 15px;
+        width: initial;
+        float: left;
         overflow: hidden; }
         @media screen and (max-width: 767px) {
           .salon#content .sidebar .related-content .rival a:first-child {
@@ -9446,7 +9449,7 @@ section.home-footer .row > div {
         color: #595959;
         font-weight: 200;
         padding-left: 0; }
-        .salon#content .sidebar .related-content .rival a:nth-child(2) span {
+        .salon#content .sidebar .related-content .rival a:nth-child(2) span:first-child {
           display: block;
           font-weight: 600;
           letter-spacing: .5px;
