--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -322,6 +322,9 @@
 					border:none;
 				}
 				a:first-child {
+					padding-right: 15px;
+					width: initial;
+					float: left;
 					overflow: hidden;
 					@media screen and (max-width: $screen-xs-max) {
 						padding-left: 0;
@@ -333,7 +336,7 @@
 					font-weight: $light;
 					padding-left: 0;
 
-					span {
+					span:first-child {
 						display: block;
 						font-weight: $semiBold;
 						letter-spacing: .5px;
