--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -322,6 +322,7 @@
 					border:none;
 				}
 				a:first-child {
+					padding-left: 15px;
 					padding-right: 15px;
 					width: initial;
 					float: left;
