Git pull update style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7241,7 +7241,7 @@ span.arrow-right {
       margin-top: 20px; } }
 
 .cal {
-  max-width: 100% !important;
+  max-width: 100%;
   display: block;
   width: 100%;
   /* Small devices (tablets, 768px and up) */
