Number Phone is display when the Business is not booking

--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -232,7 +232,7 @@
 				}
 				&:after {
 					content: " ";
-					background: url(../images/icon-phone.png) no-repeat center center;
+					background: url(../../images/icon-phone.png) no-repeat center center;
 					position: absolute;
 					width: 25px;
 					height: 25px;
