--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9354,7 +9354,7 @@ section.home-footer .row > div {
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFD7474D', endColorstr='#FFFC5B62', GradientType=0); }
     .salon#content .sidebar .phone .btn-red:after {
       content: " ";
-      background: url(../images/icon-phone.png) no-repeat center center;
+      background: url(../../images/icon-phone.png) no-repeat center center;
       position: absolute;
       width: 25px;
       height: 25px;
