--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -215,6 +215,13 @@
 			}
 		}
 		.phone {
+				@media screen and (max-width: $screen-sm-max) {
+    				bottom: 0;
+    				left: 0;
+    				position: fixed;
+    				width:100%;
+    				z-index: 9000;
+				}
 			.btn-red {
 				position: relative;
 				display: block;
@@ -223,6 +230,9 @@
 				font-size: 2.1em;
 				font-weight: $semiBold;
 				margin-bottom: 10px;
+				@media screen and (max-width: $screen-sm-max) {
+					margin-bottom: 0px;
+				}
 				@include box-shadow(0 1px 3px rgba(0,0,0,0.1));
 				//#gradient@include vertical(#fc5b62;#d7474d;);
 				@include gradient-vertical(#fc5b62, #d7474d);
@@ -279,6 +289,7 @@
 				font-weight: $semiBold;
 				font-size: 1.9em;
 				width: 100%;
+				margin-bottom: 10px;
 				text-transform: uppercase;
 				letter-spacing: 2px;
 				padding-top: 20px;padding-bottom: 20px;
@@ -289,6 +300,7 @@
     				position: fixed;
     				width:100%;
     				z-index: 10000;
+    				margin-bottom: 0px;
 				}
 			}
 		}
