--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -683,6 +683,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 }
 div.pagination {
 	font-size: 1.4em;
+	margin-bottom: 50px;
 	position: relative;width: 100%;
 	ul {
 		position: absolute; left: 50%;margin-left: -90px;
