--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -16,3 +16,5 @@ $font-main: 'Source Sans Pro', sans-serif;
 $light: 200;$regular: 400;$semiBold: 600;
 $font-second: 'Lato', sans-serif;	
 $latoLight: 300; $latoBold: 700;
+$facebook-bg: #6686D0;
+$twitter-bg: #14C4F8;
