--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8122,16 +8122,17 @@ header {
       header nav ul li {
         padding-top: 17px;
         padding-left: 20px;
-        display: inline-block; }
+        display: inline-block;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        font-size: 1.6em;
+        letter-spacing: 1px; }
         header nav ul li:first-child {
           padding-left: 0; }
         header nav ul li a {
-          font-family: 'Source Sans Pro', sans-serif;
-          font-weight: 600;
-          color: white;
-          text-decoration: none;
-          font-size: 1.6em;
-          letter-spacing: 1px; }
+          color: white; }
           header nav ul li a:visited, header nav ul li a:active, header nav ul li a:focus {
             text-decoration: none;
             color: white; }
@@ -8169,7 +8170,9 @@ header {
       background: url(../images/logo-red.png) no-repeat center center;
       background-size: 100%; }
     header.white nav ul li a {
-      color: #595959; }
+      color: #c4c4c4; }
+    header.white nav ul li span {
+      color: #c4c4c4; }
 
 .dropdown {
   font-weight: 400; }
@@ -10096,7 +10099,7 @@ section.home-footer .row > div {
   margin: auto;
   margin-top: 15px;
   margin-bottom: 15px;
-  width: 40%;
+  width: 35%;
   min-width: 200px;
   background-color: #FFFFFF; }
   .connect-form h2 {
@@ -10107,10 +10110,10 @@ section.home-footer .row > div {
     color: #D8D8D8; }
   @media screen and (min-width: 992px) and (max-width: 1199px) {
     .connect-form {
-      width: 60%; } }
+      width: 55%; } }
   @media screen and (min-width: 768px) and (max-width: 991px) {
     .connect-form {
-      width: 80%; } }
+      width: 75%; } }
   @media screen and (max-width: 767px) {
     .connect-form {
       width: 100%;
@@ -10124,22 +10127,44 @@ section.home-footer .row > div {
     display: block;
     margin-top: 10px;
     margin-bottom: 10px; }
+  .connect-form div.connect-button div span {
+    display: block;
+    text-align: center;
+    color: white;
+    font-size: 1.8em;
+    padding-top: 14px; }
   .connect-form div.connect-button .facebook {
+    cursor: pointer;
+    border-radius: 5px;
+    overflow: hidden;
     height: 60px;
     margin: 10px;
-    background-color: #4E69A2; }
-    .connect-form div.connect-button .facebook:after {
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color: #6686D0; }
+    .connect-form div.connect-button .facebook:before {
       content: " ";
-      background: url(../../images/fb-connect.png) no-repeat center center;
+      background: url(../../img/facebook@2x.png) no-repeat center center;
       position: absolute;
-      width: 25px;
-      height: 25px;
-      left: 20px;
-      top: 21px; }
+      width: 60px;
+      height: 60px;
+      margin-left: 5px; }
   .connect-form div.connect-button .twitter {
+    cursor: pointer;
+    border-radius: 5px;
+    overflow: hidden;
     height: 60px;
     margin: 10px;
-    background-color: #4099FF; }
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color: #14C4F8; }
+    .connect-form div.connect-button .twitter:before {
+      content: " ";
+      background: url(../../img/twitter@2x.png) no-repeat center center;
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      margin-left: 5px; }
   .connect-form a.full {
     display: block;
     width: 100%;
@@ -10154,7 +10179,9 @@ section.home-footer .row > div {
     box-shadow: 0 0 0 transparent;
     line-height: 50px; }
   .connect-form form.form div.form-group {
-    margin: 10px; }
+    margin: 10px;
+    margin-left: 25px;
+    margin-right: 25px; }
     .connect-form form.form div.form-group input.form-control {
       background-color: #E6E6E6;
       height: 60px;
