--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -37,8 +37,8 @@
 				}
 				.outer-img {
 					height: 570px;
-					@media screen and (max-width: $screen-xs-max) {
-					height: 300px;
+					@media screen and (min-width: 570px) and (max-width: $screen-xs-max) {
+						height: $screen-xs-max;
 					}
 				}
 			}
