--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(../fonts/socicon/socicon.css);
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
