--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -5,7 +5,7 @@ $icon-font-path: "../components/bootstrap/fonts/";
 @import "../components/bootstrap-social/bootstrap-social.scss";
 @import "../components/font-awesome/scss/font-awesome.scss";
 
-// // @import "../fonts/socicon/socicon.css";
+@import "../fonts/socicon/socicon.css";
 
 body {
     font-size: 1em; font-size: 100%; font-size: 10px;
