--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -132,7 +132,7 @@ div#app {
     background-position: 50% 50%;
     background-color: #838B95;
     width: 100%;
-    height: 100%;
+    //height: 100%;
 }
 
 #content.search .main-content .tab-pane section .rating .note {
