--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -1,7 +1,7 @@
 /*////////////////////////////////
 	   P A G E  S A L O N
 ////////////////////////////////*/
-.carousel-inner .item {
+#carousel-salon .carousel-inner .item {
 	height: 470px;
 	background: url(../images/placeholder-salon-img.jpg) no-repeat center center;
 	background-size: cover;
