--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -117,6 +117,12 @@ header {
 			width: 100%;
 
 			a {
+				font-family: 'Source Sans Pro', sans-serif;
+				font-weight: 600;
+				color: white;
+				text-decoration: none;
+				font-size: 1.6em;
+				letter-spacing: 1px;
 				display: block;
 				width: 100%;
 			}
