--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9659,7 +9659,8 @@ section.home-footer .row > div {
             float: none;
             text-decoration: none;
             font-size: 0.9em;
-            color: #595959; }
+            color: #595959;
+            cursor: pointer; }
             .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:hover {
               color: black; }
             .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:after {
@@ -9692,9 +9693,12 @@ section.home-footer .row > div {
       .hairfie-singleView#content .single-view .like-group .like-btn {
         border-top: 1px solid #e5e5e5;
         float: left;
-        display: inline-block; }
+        display: inline-block;
+        background-color: white; }
         .hairfie-singleView#content .single-view .like-group .like-btn a {
+          cursor: pointer;
           display: block;
+          text-align: center;
           width: 65px;
           height: 65px;
           position: relative;
@@ -9741,7 +9745,7 @@ section.home-footer .row > div {
       .hairfie-singleView#content .single-view .like-group .cta {
         float: none;
         display: inline-block;
-        width: 100%;
+        width: calc(100% - 65px);
         height: 65px; }
         .hairfie-singleView#content .single-view .like-group .cta a {
           text-transform: uppercase;
@@ -9928,6 +9932,41 @@ section.home-footer .row > div {
             border-color: #efeff0;
             cursor: not-allowed;
             opacity: .7; }
+    #content.reservation .main-content div.connect-button div span {
+      display: block;
+      text-align: center;
+      color: white;
+      font-size: 1.8em;
+      padding-top: 14px;
+      padding-left: 60px; }
+    #content.reservation .main-content div.connect-button .facebook {
+      cursor: pointer;
+      border-radius: 5px;
+      overflow: hidden;
+      height: 60px;
+      margin: 10px;
+      background-color: #6686D0; }
+      #content.reservation .main-content div.connect-button .facebook:before {
+        content: " ";
+        background: url(../../img/facebook@2x.png) no-repeat center center;
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        margin-left: 5px; }
+    #content.reservation .main-content div.connect-button .twitter {
+      cursor: pointer;
+      border-radius: 5px;
+      overflow: hidden;
+      height: 60px;
+      margin: 10px;
+      background-color: #14C4F8; }
+      #content.reservation .main-content div.connect-button .twitter:before {
+        content: " ";
+        background: url(../../img/twitter@2x.png) no-repeat center center;
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        margin-left: 5px; }
 
 #content.reservation.confirmation {
   color: #595959; }
@@ -10102,6 +10141,11 @@ section.home-footer .row > div {
   .connect-form h4 {
     text-align: center;
     color: #D8D8D8; }
+  .connect-form a.green {
+    text-align: center;
+    width: 100%;
+    display: block;
+    font-size: 1.5em; }
   .connect-form span.separator {
     width: 100%;
     height: 1px;
@@ -10116,7 +10160,8 @@ section.home-footer .row > div {
     text-align: center;
     color: white;
     font-size: 1.8em;
-    padding-top: 14px; }
+    padding-top: 14px;
+    padding-left: 60px; }
   .connect-form div.connect-button .facebook {
     cursor: pointer;
     border-radius: 5px;
