--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -7,6 +7,12 @@
 		text-align: center;
 		color: #D8D8D8;
 	}
+	a.green {
+		text-align: center;
+		width: 100%;
+		display: block;
+		font-size: 1.5em;
+	}
 	padding-top: 1px;
 	margin-top: 15px;
 	margin-bottom: 75px;
@@ -28,6 +34,7 @@
 			color: white;
 			font-size: 1.8em;
 			padding-top: 14px;
+			padding-left: 60px;
 		}
 		.facebook {
 			cursor: pointer;
