--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -157,6 +157,7 @@
 						text-decoration: none;
 						font-size: 0.9em;
 						color: $font-color;
+						cursor: pointer;
 						&:hover {
 							color: black;
 						}
@@ -199,9 +200,11 @@
 			.like-btn {
 				border-top: 1px solid $border-color;
 				float: left; display: inline-block;
+				background-color: white;
 				a {
+					cursor: pointer;
 					display: block;
-					// width: 100%;height: 100%;
+					text-align: center;
 					width: 65px;height: 65px;
 					position: relative;
 					border-right: 1px solid $border-color;
@@ -215,7 +218,6 @@
 						height: 1.2em;
 						line-height: 1.2em;
 						@include transition(all 0.1s ease);
-
 						&:after {
 							content:"\e005";
 							font-family: glyphicon;
@@ -239,7 +241,7 @@
 			.cta {
 				float: none;
 				display: inline-block;
-				width: 100%;
+				width: calc(100% - 65px);
 				height: 65px;
 				a {
 					text-transform: uppercase;
