--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -15,6 +15,9 @@
 	}
 	padding-top: 1px;
 	margin-top: 15px;
+	@media screen and (max-width: $screen-xs-max) {
+		margin-top: 115px;
+	}
 	margin-bottom: 75px;
 	background-color: #FFFFFF;
 	span.separator {
@@ -110,7 +113,7 @@
 		.register-checkbox {
 			padding-left: 40px;
 			padding-bottom: 15px;
-			a, label {font-size: 1.4em;color: $font-color;}
+			a, label {color: #D8D8D8;}
 		}
 	}
 }
