--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -152,6 +152,11 @@
 				.likes {
 					padding: 0;
 					padding-top: 5px;
+
+					span {
+						padding-left: 0;
+					}
+
 					a {
 						float: none;
 						text-decoration: none;
