--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -111,7 +111,7 @@
 			}
 		}
 		.register-checkbox {
-			font-weight: inherit;
+			font-weight: 400;
 			padding-left: 40px;
 			padding-bottom: 15px;
 			font-size: 1.4em;
