--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9665,13 +9665,12 @@ section.home-footer .row > div {
             float: none;
             text-decoration: none;
             font-size: 0.9em;
-            color: #595959;
-            cursor: pointer; }
+            color: #595959; }
             .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:hover {
               color: black; }
             .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:after {
               content: " ";
-              width: 72%;
+              width: calc(100% - 15px);
               height: 1px;
               background-color: #595959;
               position: absolute;
@@ -9682,7 +9681,7 @@ section.home-footer .row > div {
             .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:first-child:after {
               left: 0; }
           .hairfie-singleView#content .single-view > div:nth-child(2) .salon-infos .likes a:nth-child(2):after {
-            width: 66%; }
+            width: calc(100% - 30px); }
     .hairfie-singleView#content .single-view .like-group {
       width: 100%;
       height: 65px;
