--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -162,7 +162,6 @@
 						}
 						&:after {
 							content: " ";
-							width: calc(100% - 15px);
 							height: 1px;
 							background-color: $font-color;
 							position: absolute; bottom: -1px;
@@ -172,10 +171,11 @@
 					a:first-child {
 						padding-left: 0;
 						&:after {
+							width: calc(100% - 15px);
 							left: 0;
 						}
 					}
-					a:nth-child(2) {
+					a:last-child {
 						&:after {
 							width: calc(100% - 30px);
 						}
