--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -118,5 +118,9 @@
 			label {color: $font-color;}
 			a {color: darkblue;}
 		}
+		.uploadFile {
+			display: block;
+			font-size: 1.4em;
+		}
 	}
 }
