--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -12,6 +12,7 @@
 		width: 100%;
 		display: block;
 		font-size: 1.5em;
+		margin-bottom: 10px;
 	}
 	padding-top: 1px;
 	margin-top: 15px;
@@ -77,7 +78,7 @@
 		width: 100%;
 		height: 65px;
 		text-transform: uppercase;
-		border-radius: 0; 
+		border-radius: 0;
 		margin: 0;
 		font-weight: $semiBold;letter-spacing: 2px;
 		line-height: 50px;
@@ -98,7 +99,7 @@
 			div.infos {
 				a {
 					font-size: 1.2em;
-	 				font-weight: 400;	
+	 				font-weight: 400;
 				}
 			}
 			label.radio-inline {
