--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -7,7 +7,7 @@
 		text-align: center;
 		color: #D8D8D8;
 	}
-	a.green {
+	a.green, p.red {
 		text-align: center;
 		width: 100%;
 		display: block;
